--- a/gui_cp2.csproj
+++ b/gui_cp2.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>packages\Newtonsoft.Json.13.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -46,14 +49,75 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="classes\Address.cs" />
+    <Compile Include="classes\JsonWorker.cs" />
+    <Compile Include="classes\LandlinePhone.cs" />
+    <Compile Include="classes\MobilePhone.cs" />
+    <Compile Include="classes\Person.cs" />
+    <Compile Include="classes\Telephone.cs" />
+    <Compile Include="classes\TelephoneType.cs" />
+    <Compile Include="ui\extradatachange\addr\ExtraAddrChange.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="ui\extradatachange\addr\ExtraAddrChange.Designer.cs">
+      <DependentUpon>ExtraAddrChange.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ui\extradatachange\addr\NewAddrCreation.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ui\extradatachange\addr\NewAddrCreation.Designer.cs">
+      <DependentUpon>NewAddrCreation.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ui\extradatachange\tlph\ExtraTlphChange.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ui\extradatachange\tlph\ExtraTlphChange.Designer.cs">
+      <DependentUpon>ExtraTlphChange.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ui\extradatachange\tlph\NewTlphCreation.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ui\extradatachange\tlph\NewTlphCreation.Designer.cs">
+      <DependentUpon>NewTlphCreation.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ui\MainMenu.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ui\MainMenu.Designer.cs">
+      <DependentUpon>MainMenu.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ui\personcreation\NewPersonCreation.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ui\personcreation\NewPersonCreation.Designer.cs">
+      <DependentUpon>NewPersonCreation.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ui\SearchForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ui\SearchForm.Designer.cs">
+      <DependentUpon>SearchForm.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="ui\extradatachange\addr\ExtraAddrChange.resx">
+      <DependentUpon>ExtraAddrChange.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ui\extradatachange\addr\NewAddrCreation.resx">
+      <DependentUpon>NewAddrCreation.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ui\extradatachange\tlph\ExtraTlphChange.resx">
+      <DependentUpon>ExtraTlphChange.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ui\extradatachange\tlph\NewTlphCreation.resx">
+      <DependentUpon>NewTlphCreation.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ui\MainMenu.resx">
+      <DependentUpon>MainMenu.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ui\personcreation\NewPersonCreation.resx">
+      <DependentUpon>NewPersonCreation.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -63,6 +127,10 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ui\SearchForm.resx">
+      <DependentUpon>SearchForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -76,5 +144,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
